@@ -141,6 +141,8 @@ because of Phabricator reports.
 * …
 
 === Breaking changes in 1.37 ===
+* WANObjectCache::HOLDOFF_NONE, deprecated since 1.35, was removed.
+  Use HOLDOFF_TTL_NONE instead.
 * …
 
 === Deprecations in 1.37 ===
